--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -43,7 +43,7 @@
                     </button>
                 </div>
                 <div class="row">
-                    <div id="extend-filter" class="extend-filter-container collapse in" *ngIf="dashboardService.metadata.length">
+                    <div id="extend-filter" class="extend-filter-container collapse" *ngIf="dashboardService.metadata.length">
                         <div class="card">
                             <ul class="row m-l-r-none nav nav-pills">
                                 <li class="nav-pill col-xs-2 col-width-21" *ngFor="let metafilter of metafilters">
@@ -80,7 +80,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <button class="btn btn-primary">submit</button>
+                        <button class="btn btn-success">submit</button>
                     </div>
                 </div>
             </form>
