--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -216,6 +216,9 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc);
 	background-position: center bottom, center calc(100% - 0px);
 }
+.form-group textarea.form-control {
+	height: 49px;
+}
 .form-control-static {
 	padding-left: 5px;
 	padding-right: 5px;
